# belief_tracking

./: .gitignore  .txt  README.md  agent_perspective_variable_accs.json  analysis.ipynb  attribution_score.pt  avg_resid_vectors.json  bigtom_utils.py  circuit_finding.ipynb  correctness_variable_accs.json  dataset_aug.ipynb  env.yml  env_demo.yml  environment.yml  eval_models.py  evaluate_llm.py  fb_errors.json  finetune.py  finetuning.ipynb  gpt2-large_log.txt  gpt2-medium_log.txt  gpt2_log.txt  heads_affect_letter_attending_heads.pt  heads_affecting_final_out.pt  heads_affecting_final_out_new.pt  llama-7b_log.txt  log  models.json  option_heads_attribution_score.pt  org_tomi_priming_examples.txt  org_tomi_priming_examples_rationale.txt  original_tom_results.txt  patching.py  priming_examples.txt  priming_examples_with_rationale.txt  pyproject.toml  results.json  samples.json  story_rephraser.ipynb  tb_errors.json  (+9 more)
.ipynb_checkpoints/: dataset_aug-checkpoint.ipynb
BigToM/: bigtom_analysis.ipynb  bigtom_rep_analysis.ipynb  dcm_bigtom.ipynb
CausalToM_novis/: no_visibility_exps.ipynb  utils.py
CausalToM_vis/: explicit_visibility_exps.ipynb
attn_knockout_results/: secondSent_firstVisSent.json
bigtom_dcm_results/: answer_state-51-79.json  bigtom_answer_results.csv  bigtom_answer_state_results.csv  bigtom_query_character_results.csv  query_character-0-9.json  query_character-35-35.json  query_character-36-39.json  visibility-71-79.json
bigtom_patching_results/: answer.json  answer_state.json  query_charac.json  query_character.json  query_sent.json  vis_sent.json  (+2 more)
(+1159 files in other folders)
