[project]
name = "mind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataclasses-json>=0.6.7",
    "datasets>=4.1.1",
    "fire>=0.7.1",
    "huggingface-hub>=0.35.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "nnsight==0.4.6",
    "numpy>=2.3.3",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
]
